iRedMail-0.9.0:
    * Drop support for below distributions and releases:
        + FreeBSD 8.x.
        + Ubuntu 10.04 (lucid). Please use 12.04 (precise) instead.
        + openSUSE 12.1 (asparagus). Please use 12.2 (mantis) instead.

    * Fixed:
        + Incorrect SQL table name in Cluebringer httpd config file.
        + Empty value of AMAVISD_VIRUSMAILS_DIR on RHEL/CENTOS/Scientific 6.
          Thanks kislik <kislik _at_ centrum.cz> for the report.

iRedMail-0.8.2:
    * Add shell script to backup PostgreSQL databases in cron by default.
      Script is /var/vmail/backup/backup_pgsql.sh, backup directory is
      /var/vmail/backup/pgsql/.
    * It now works on openSUSE-12.2 with all 3 backends available.
    * Drop support for Ubuntu-11.10 (oneiric).
    * New columns for MySQL/PGSQL backend in table vmail.mailbox:
      isadmin, isglobaladmin, language.
    * Allow to use LDAP attribute shadowAddress for mail list account.
      Thanks chrisjrob <cjr _at_ tridentgarages.co.uk> for the report.
    * Add checkpoint setting in OpenLDAP for data recovery, used to define
      the time between BDB checkpoint operations. Default is whenever 128kb
      data bytes written or 5 minutes has elapsed whichever occurs first.
    * Rotate Dovecot log files on OpenBSD and FreeBSD.
    * Allow to use LDAP attribute domainGlobalAdmin for mail user.
    * Fixed:
        + Don't orerride default SpamAssassin score of SPF_PASS, SPF_FAIL.
          Thanks brandon <brandon _at_ brandonbianchi.com> and imknight
          <ian _at_ imknight.co.uk> for the feedback.
        + [LDAP] Incorrect maildir path while using Postfix built-in
          'virtual' transport.
        + Incorrect log rotate setting of iRedAPD log file on FreeBSD.
          Thanks openbsdnoob <w-chi _at_ gmx.de> for the report.
    * Package update:
        + phpMyAdmin -> 3.5.2.2
        + iRedAPD -> 1.3.8
        + iRedAdmin -> 0.1.9
        + Roundcube webmail -> 0.8.1

iRedMail-0.8.1: